# CIAA_maqueta_monitor_barrera

./: CMakeLists.txt
.metadata/: version.ini
.metadata/.mylyn/.taskListIndex/: segments_1
.metadata/.plugins/org.eclipse.core.resources/: 2.snap  3.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/firmware/: .markers  .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree  3.tree  4.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.core/.launches/: monitor_barrera.launch  monitor_barrera_firmware.launch
.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/http-cache.lucene60/: segments_1
.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history.lucene60/: _0.cfe  _0.cfs  _0.si  segments_1
.metadata/.plugins/org.eclipse.equinox.p2.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.ivan-desktop_64/: node.properties
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
firmware/: .cproject  Makefile
firmware/modules/lpc4337_m4/sapi_rtos/inc/: sapi_uart.h
firmware/modules/lpc4337_m4/sapi_rtos/src/: sapi_uart.c
firmware/projects/monitor_barrera/: .cproject  .project  Makefile
firmware/projects/monitor_barrera/inc/: PcManager.h  Uart.h
firmware/projects/monitor_barrera/src/: Main.c  PcManager.c  Uart.c  freeRTOS_01_blinky.c
firmware/sapi_examples/edu-ciaa-nxp/cooperative_os_scheduler_01_seos/src/: seos.c
firmware/sapi_examples/edu-ciaa-nxp/cooperative_os_scheduler_02_seos_background_foreground/src/: seos_bakground_foreground.c
firmware/sapi_examples/edu-ciaa-nxp/freeOSEK_01_blinky/src/: blinky.c
firmware/sapi_examples/edu-ciaa-nxp/servo_01/src/: servo.c
monitor_barrera-pc/: build.gradle
monitor_barrera-pc/gradle/wrapper/: gradle-wrapper.properties
(+20 files in other folders)
